2008-06-04  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/native_effects/PicmixEffect.cpp: fix configuration file
	reading.

2008-05-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/doc/linux_tips.dox: add some linux help.

	* src/doc/windows_tips.dox: add some windows help.

	* src/native_effects/PicmixEffect.cpp: fix aspect ratio,
	improve compatibility with existing picmix config files.

2008-05-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/native_effects/PicmixEffect.cpp: first crude but working
	effort at using picmix caches for effects.  Tried it with the
	flag (http://makesweet.com/mixer/my-flag) effect and it worked.
	No shading, or surface selection, and rather slow so far.

	* src/native_effects/ImageLoader.h: add image sequence cache.

	* src/native_effects/MapCache.h: add key for interpreting
	picmix maps.

	* src/native_effects/OverlayEffect.cpp: move simple overlay
	operation to a dedicated effect, reserve picmix for specialized
	remapping behavior.

	* src/native_effects/PicmixEffect.cpp: for now, just
	use this effect to overlay a graphic with transparency
	on the video stream.

2008-05-25  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/native_effects/PicmixEffect.cpp: stub now reads 
	configuration, and single image overlays.   Still just a
	stub though.

2008-05-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/native_effects/PicmixEffect.cpp: add stub for a new
	effect.

2008-05-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/linux/VcamLinux.cpp: video capture disabled for now,
	while compiling to distribute with a codec-stripped version
	of the ffmpeg libraries.


2008-05-22  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/gui/gui.cpp: deal with string issues in version 2.6
	of wxwidgets

	* src/modules/CMakeLists.txt: inaccurate path if YARP 
	compiled with an out-of-source build.

2008-04-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/PackageInfo.cmake: factor out packaging verbiage.
