@@ -1,3 +1,9 @@
+2008-06-06  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/native_effects/PicmixEffect.cpp: accept "effect.ini"
+	if "config.ini" is not present, to be compatible with
+	downloaded effects.
+
 2008-06-04  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/native_effects/PicmixEffect.cpp: fix configuration file
